--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
 	"description": "",
 	"main": "moody.js",
 	"scripts": {
-		"serve": "npx http-server -c-1 -p 5000 -o"
+		"serve": "npx http-server -c-1 -p 5000 -o",
+		"lint": "npx eslint ."
 	},
 	"keywords": [],
 	"author": "Michael Ennen (brcolow)",
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"@eslint/js": "^9.17.0",
+		"eslint": "^9.17.0",
+		"globals": "^15.14.0"
+	}
 }
